frontend/src/styles/scss/_query.scss
@use 'common-functions' as common;

$padding: 24px;

.dropdown-menus-bar {
    min-height: 60px;
    padding: common.spacing(1, 0);

    .dropdown-menus-bar-buttons {
        display: flex;
        align-items: center;
        justify-content: flex-start;
        margin-bottom: 8px;
        @media (max-width: 768px) {
            flex-direction: column;
            height: auto;
        }
    }

    button {
        margin-right: common.spacing(1);
        background-color: #fff;
        padding: common.spacing(0, 2);

        &[aria-expanded='true'] {
            background-color: rgba(0, 0, 0, 0.075);
        }
        .mdc-button__label .fal {
            margin-left: common.spacing(2);
        }
        &.perma-link {
            background-color: transparent;
            margin-left: auto;
            font-size: 20px;
        }
    }
}
@media (max-width: 768px) {
    .dropdown-menus-bar {
        .dropdown-menus-bar-buttons {
            align-items: flex-start;
        }
    }
}

.perm-xml-json-resultlinks {
    line-height: 1.8rem;
    padding: common.spacing(1);
    padding-left: $padding;
    padding-right: $padding;
    .perm-xml-json {
        padding-top: 0.5rem;
        padding-bottom: 0.5rem;
        display: flex;
        align-items: center;
        gap: 1rem;
    }
    .controls {
        display: flex;
        padding-bottom: 0.5rem;
        input {
            width: 100%;
            background-color: #fefefe;
            &:disabled {
                border: 0;
            }
        }
        button {
            margin-left: 8px;
            span.mdc-button__label {
                white-space: nowrap;
            }
        }
    }
}

.mat-mdc-menu-panel.mat-mdc-menu-panel {
    max-width: unset !important;
}

.mat-tooltip {
    font-size: 12px !important;
}

.mat-menu-content:not(:empty) {
    padding: common.spacing(1) !important;
}

#informationSection {
    margin-top: 50px;
    .row {
        gap: 20px;
        max-width: 1200px;
    }
    .card-info {
        display: flex;
        width: 498px;
        div {
            position: relative;
            padding: 20px;
            border: 1px solid #cfcfcf;
            border-radius: 8px;
            background-color: #ffffff;
            color: #3d3d3d;
            font-size: 14px;
        }
        a {
            position: absolute;
            bottom: 0;
            right: 26px;
            margin-bottom: 1rem;
            font-weight: 500;
        }
        p {
            color: #080037;
            font-size: 16px;
            font-weight: 600;
        }
    }
}

.mat-mdc-menu-content {
    .row {
        white-space: nowrap;

        .mat-mdc-checkbox-touch-target {
            display: none;
        }
    }

    em.close {
        position: absolute;
        right: 10px;
        top: 10px;
    }
}

